# base-datos2

./: .env.example  README.md
backend/: pyproject.toml  run.ps1
backend/scripts/: test_neo4j_get_took.py  test_neo4j_graph.py
backend/src/app/repositories/: neo4j_repo.py
backend/src/app/schemas/: institution.py  subject.py
backend/src/edugrade/: config.py  main.py  startup.py
backend/src/edugrade/api/: router.py
backend/src/edugrade/api/endpoint/: dashboard.py  equivalences.py  grades.py  institutions.py  options.py  students.py
backend/src/edugrade/audit/: context.py  exec.py  logger.py  middleware.py  routes.py  schema.py
backend/src/edugrade/core/: db.py  mongo_types.py  neo4j_db.py
backend/src/edugrade/models/: neo4j.py
backend/src/edugrade/repository/: mongo_grade.py  mongo_institution.py  mongo_student.py  neo4j_graph.py
backend/src/edugrade/repository/mongo/: conversion_rule.py  grade.py  institution.py  options.py  student.py
backend/src/edugrade/schemas/: mongo_grade.py  mongo_institution.py  mongo_student.py  neo4j_institution.py  neo4j_relations.py  neo4j_student.py  neo4j_subject.py
backend/src/edugrade/schemas/mongo/: conversion_rule.py  dashboard.py  grade.py  grade_display.py  institution.py  student.py
backend/src/edugrade/schemas/neo4j/: institution.py  relations.py  subject.py
backend/src/edugrade/services/: mongo_grade.py  mongo_institution.py  mongo_student.py  neo4j_graph.py  student_history.py
backend/src/edugrade/services/mongo/: conversion_rules.py  (+5 more)
backend/src/edugrade/utils/: date.py  object_id.py  string.py
(+5 files in other folders)
